# deg42

./: LICENSE  pyproject.toml
deg42/: core.py
